done login,register

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SERVER_PORT=9999
 SERVER_HOST_NAME=localhost
+JWT_ACCESS_KEY=superlongaccesstokenkeysang123@gmail.com
+JWT_REFRESH_KEY=superlongrefreshtokenkeysang123@gmail.com
