--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ SERVER_PORT=9999
 SERVER_HOST_NAME=localhost
 JWT_ACCESS_KEY=superlongaccesstokenkeysang123@gmail.com
 JWT_REFRESH_KEY=superlongrefreshtokenkeysang123@gmail.com
+
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=sangkdhe161711@gmail.com
+MAIL_PASSWORD=
+MAIL_FROM=${MAIL_USER}
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
