--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express-form-data": "^2.0.23",
     "mongoose": "^8.0.3",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
