done login google, facebook

--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ MAIL_USER=sangkdhe161711@gmail.com
 MAIL_PASSWORD=
 MAIL_FROM=${MAIL_USER}
 MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
+
+GOOGLE_OAUTH_CLIENT_ID=148378248418-9psrftd3qpvlfe5s3dro54kl5f16hmoi.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:9999/api/auth/google/callback
+
+
+FACEBOOK_APP_ID=762446982457478
+FACEBOOK_APP_SECRET=9cc3d8500cf6cc6e16bd1d06342b9850
+FACEBOOK_CALLBACK_URL=http://localhost:9999/api/auth/facebook/callback
