--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "cookie-parser": "^1.4.6",
     "express-form-data": "^2.0.23",
     "mongoose": "^8.0.3",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
@@ -50,6 +53,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
