--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "dependencies": {
     "@aginix/nestjs-firebase-admin": "^2.2.0",
     "@nestjs-modules/mailer": "^1.10.3",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.3",
     "@nestjs/swagger": "^7.1.17",
     "@vonage/server-sdk": "^3.12.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
