--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/swagger": "^7.1.17",
+    "@nestjs/websockets": "^10.3.3",
     "@vonage/server-sdk": "^3.12.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
